--- a/index.html
+++ b/index.html
@@ -12,12 +12,10 @@
 <body>
     <section>
         <nav>
-            <a href="#" class="logo">DEVI'S PROFILE</a>
+            <a href="#" class="logo">DEVI'S</a>
             <ul>
                 <li><a class="nav-link" href="index.html">HOMEPAGE</a></li>
                 <li><a class="nav-link" href="hometown.html">HOMETOWN</a></li>
-                <li><a class="nav-link" href="food.html">FOOD</a></li>
-                <li><a class="nav-link" href="destination.html">DESTINATION</a></li>
             </ul>
         </nav>
         <div class="text-container">
@@ -33,14 +31,67 @@
                 <p>3rd Year Computer Science Student</p>
                 <p>Hello, My name is Devi Hainun Pasya. I'm a 3rd Year Computer Science
                 student in Sepuluh Nopember Institute of Technology Surabaya. I was born in
-                Balikpapan, Kalimantan Timur. I'm 20 years old. My all time hobby is gaming
-                and swimming.</p>
-                <p>This is my first website that i created for my Web Programming assignment.
-                Still need a lot of work and improvements but I hope you guys like it!</p>
-                <button>My GitHub</button>
-                <button>My CV</button>
+                Balikpapan, Kalimantan Timur. I'm 20 years old.</p>
+                <button>My GitHub <a href="https://github.com/notdevi"></a></button>
             </div>
         </div>
+        <div class="slider">
+            <p>WEB DESIGNS</p>
+            <p>Here are some web designs that i've worked on :<br><br></p>
+            <div class="slider-items">
+                <div class="item active">
+                    <img src="backgrounds/cande1.PNG" alt="">
+                    <div class="caption">Cande is an e-commerce website that has instagram-like interface</div>
+                </div>
+                <div class="item">
+                    <img src="backgrounds/cande2.PNG" alt="">
+                    <div class="caption"></div>
+                </div>
+                <div class="item">
+                    <img src="backgrounds/cande3.PNG" alt="">
+                    <div class="caption"></div>
+                </div>
+            </div>
+            <div class="left-slide"><<</div>
+            <div class="right-slide">>></div>
+        </div>
+        <div class="slider">
+            <div class="slider-items">
+                <div class="item active">
+                    <img src="backgrounds/besma1.PNG" alt="">
+                    <div class="caption">Besmakitas is a website that is made for students to apply for scholarships</div>
+                </div>
+                <div class="item">
+                    <img src="backgrounds/besma2.PNG" alt="">
+                    <div class="caption"></div>
+                </div>
+                <div class="item">
+                    <img src="backgrounds/besma3.PNG" alt="">
+                    <div class="caption"></div>
+                </div>
+            </div>
+            <div class="left-slide"><<</div>
+            <div class="right-slide">>></div>
+        </div>
+        <div class="slider">
+            <div class="slider-items">
+                <div class="item active">
+                    <img src="backgrounds/cv1.PNG" alt="">
+                    <div class="caption">Here's a website for a CV that spesialize in building constructions</div>
+                </div>
+                <div class="item">
+                    <img src="backgrounds/cv2.PNG" alt="">
+                    <div class="caption"></div>
+                </div>
+                <div class="item">
+                    <img src="backgrounds/cv3.PNG" alt="">
+                    <div class="caption"></div>
+                </div>
+            </div>
+            <div class="left-slide"><<</div>
+            <div class="right-slide">>></div>
+        </div>
+        <script src="hometown.js"></script>
         <div class="interest">
             <div class="interest-text">
                 <p>INTEREST</p>
