--- a/index.html
+++ b/index.html
@@ -35,13 +35,16 @@
                 <button>My GitHub <a href="https://github.com/notdevi"></a></button>
             </div>
         </div>
-        <div class="slider">
+        <div class="webs">
+            <br><br>
             <p>WEB DESIGNS</p>
-            <p>Here are some web designs that i've worked on :<br><br></p>
+            <br>
+        </div>
+        <div class="slider">
             <div class="slider-items">
                 <div class="item active">
                     <img src="backgrounds/cande1.PNG" alt="">
-                    <div class="caption">Cande is an e-commerce website that has instagram-like interface</div>
+                    <div class="caption">Cande</div>
                 </div>
                 <div class="item">
                     <img src="backgrounds/cande2.PNG" alt="">
@@ -59,7 +62,7 @@
             <div class="slider-items">
                 <div class="item active">
                     <img src="backgrounds/besma1.PNG" alt="">
-                    <div class="caption">Besmakitas is a website that is made for students to apply for scholarships</div>
+                    <div class="caption">Besmakitas</div>
                 </div>
                 <div class="item">
                     <img src="backgrounds/besma2.PNG" alt="">
@@ -77,7 +80,7 @@
             <div class="slider-items">
                 <div class="item active">
                     <img src="backgrounds/cv1.PNG" alt="">
-                    <div class="caption">Here's a website for a CV that spesialize in building constructions</div>
+                    <div class="caption"></div>
                 </div>
                 <div class="item">
                     <img src="backgrounds/cv2.PNG" alt="">
