--- a/hometown.html
+++ b/hometown.html
@@ -14,9 +14,7 @@
             <a href="#" class="logo">MY HOMETOWN</a>
             <ul>
                 <li><a class="nav-link" href="index.html">HOMEPAGE</a></li>
-                <li><a class="nav-link" href="profile.html">PROFILE</a></li>
-                <li><a class="nav-link" href="food.html">FOOD</a></li>
-                <li><a class="nav-link" href="destination.html">DESTINATION</a></li>
+                <li><a class="nav-link" href="profile.html">HOMETOWN</a></li>
             </ul>
         </nav>
         <div class="text-container">
